lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_arg_defaults.snap
---
source: lib/src/sdk/rust/mod.rs
expression: types
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.


#[derive(Debug, Clone)]
pub struct RunnerArgs {
    /// Run mode
    /// Default: "fast"
    pub mode: Option<String>,
    /// Output path
    pub output: String,
}
