lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_boolean_flag_default_false.snap
---
source: lib/src/sdk/rust/mod.rs
expression: types
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.


#[derive(Debug, Clone, Default)]
pub struct AppFlags {
    /// Disable cache. Default: false
    pub no_cache: Option<bool>,
}
