lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_choice_collision.snap
---
source: lib/src/sdk/rust/mod.rs
expression: types
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.

use std::fmt;


#[derive(Debug, Clone, PartialEq)]
pub enum BuildEnvChoice {
    Debug,
    Release,
}

impl fmt::Display for BuildEnvChoice {
    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
        match self {
            Self::Debug => write!(f, "debug"),
            Self::Release => write!(f, "release"),
        }
    }
}

impl BuildEnvChoice {
    pub fn as_str(&self) -> &'static str {
        match self {
            Self::Debug => "debug",
            Self::Release => "release",
        }
    }
}

#[derive(Debug, Clone, PartialEq)]
pub enum DeployEnvChoice {
    Staging,
    Production,
}

impl fmt::Display for DeployEnvChoice {
    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
        match self {
            Self::Staging => write!(f, "staging"),
            Self::Production => write!(f, "production"),
        }
    }
}

impl DeployEnvChoice {
    pub fn as_str(&self) -> &'static str {
        match self {
            Self::Staging => "staging",
            Self::Production => "production",
        }
    }
}

#[derive(Debug, Clone)]
pub struct BuildArgs {
    /// Build environment
    pub env: BuildEnvChoice,
}

#[derive(Debug, Clone)]
pub struct DeployArgs {
    /// Deploy environment
    pub env: DeployEnvChoice,
}
