lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_config_all_optional.snap
---
source: lib/src/sdk/rust/mod.rs
expression: types
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.


#[derive(Debug, Clone, Default)]
pub struct AppConfig {
    /// Default: true
    pub debug: Option<bool>,
    /// Default: 8080
    pub port: Option<i64>,
}
