lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_config_boolean_default_false.snap
---
source: lib/src/sdk/rust/mod.rs
expression: types
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.


#[derive(Debug, Clone, Default)]
pub struct AppConfig {
    /// Dry run mode
    /// Default: true
    pub dry_run: Option<bool>,
    /// Verbose output
    /// Default: false
    pub verbose: Option<bool>,
}
