lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_config_props.snap
---
source: lib/src/sdk/rust/mod.rs
expression: types
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.


#[derive(Debug, Clone)]
pub struct MyappConfig {
    /// Enable debug mode
    /// Default: true
    pub debug: Option<bool>,
    pub extra: String,
    pub host: String,
    /// Default: 8080
    pub port: Option<i64>,
    /// Default: 1.5
    pub rate: Option<f64>,
}
