lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_config_string_with_default.snap
---
source: lib/src/sdk/rust/mod.rs
expression: types
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.


#[derive(Debug, Clone, Default)]
pub struct AppConfig {
    /// Server host
    /// Default: localhost
    pub host: Option<String>,
    /// Default: myapp
    pub name: Option<String>,
}
