lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_deep_nesting.snap
---
source: lib/src/sdk/rust/mod.rs
expression: client
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.

use crate::runtime::{CliRunner, CliResult};
use crate::types::{CreateArgs, CreateFlags, RunFlags};

pub struct App {
    runner: CliRunner,
    /// Database operations
    pub db: Db,
}

impl App {
    pub fn new(bin_path: &str) -> Self {
        let runner = CliRunner::new(bin_path);
        Self {
            db: Db::new(runner.clone()),
            runner,
        }
    }

    pub fn default_bin() -> Self {
        Self::new("app")
    }
    /// <SUBCOMMAND>

    pub fn exec(&self) -> Result<CliResult, crate::runtime::CliError> {
        let mut cmd_args: Vec<String> = vec![];
        self.runner.run(cmd_args)
    }
}

/// Database operations
pub struct Db {
    runner: CliRunner,
    /// Migration management
    pub migration: Migration,
}

impl Db {
    pub fn new(runner: CliRunner) -> Self {
        Self {
            runner,
            migration: Migration::new(runner.clone()),
        }
    }
    /// db <SUBCOMMAND>

    pub fn exec(&self) -> Result<CliResult, crate::runtime::CliError> {
        let mut cmd_args: Vec<String> = vec!["db".to_string()];
        self.runner.run(cmd_args)
    }
}

/// Migration management
pub struct Migration {
    runner: CliRunner,
    /// Create a new migration
    pub create: Create,
    /// Run pending migrations
    pub run: Run,
}

impl Migration {
    pub fn new(runner: CliRunner) -> Self {
        Self {
            runner,
            create: Create::new(runner.clone()),
            run: Run::new(runner.clone()),
        }
    }
    /// db migration <SUBCOMMAND>

    pub fn exec(&self) -> Result<CliResult, crate::runtime::CliError> {
        let mut cmd_args: Vec<String> = vec!["db".to_string(), "migration".to_string()];
        self.runner.run(cmd_args)
    }
}

/// Create a new migration
pub struct Create {
    runner: CliRunner,
}

impl Create {
    pub fn new(runner: CliRunner) -> Self {
        Self {
            runner,
        }
    }
    /// db migration create [--template <t>] <name>

    pub fn exec(&self, args: CreateArgs, flags: Option<CreateFlags>) -> Result<CliResult, crate::runtime::CliError> {
        let mut cmd_args: Vec<String> = vec!["db".to_string(), "migration".to_string(), "create".to_string()];
        cmd_args.push(args.name.to_string());
        let flag_args = self.build_flag_args(flags);
        cmd_args.extend(flag_args);
        self.runner.run(cmd_args)
    }

    fn build_flag_args(&self, flags: Option<CreateFlags>) -> Vec<String> {
        let mut result = Vec::new();
        let flags = match flags { Some(f) => f, None => return result };
        if let Some(ref v) = flags.template { result.push("--template".to_string()); result.push(v.to_string()); }
        result
    }
}

/// Run pending migrations
pub struct Run {
    runner: CliRunner,
}

impl Run {
    pub fn new(runner: CliRunner) -> Self {
        Self {
            runner,
        }
    }
    /// db migration run [--step <n>]

    pub fn exec(&self, flags: Option<RunFlags>) -> Result<CliResult, crate::runtime::CliError> {
        let mut cmd_args: Vec<String> = vec!["db".to_string(), "migration".to_string(), "run".to_string()];
        let flag_args = self.build_flag_args(flags);
        cmd_args.extend(flag_args);
        self.runner.run(cmd_args)
    }

    fn build_flag_args(&self, flags: Option<RunFlags>) -> Vec<String> {
        let mut result = Vec::new();
        let flags = match flags { Some(f) => f, None => return result };
        if let Some(ref v) = flags.step { result.push("--step".to_string()); result.push(v.to_string()); }
        result
    }
}
